welcome-app/hello-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app
spec:
  ingressClassName: cilium
  rules:
    - host: welcome.homelab.local
      http:
        paths:
          - backend:
              service:
                name: welcome-app
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - welcome.homelab.local
